# qa-service

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 20250827_0001_init.py
app/api/: router.py
app/api/endpoints/: answers.py  questions.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/schemas/: answer.py  question.py
tests/: conftest.py  test_answers.py  test_questions.py
